--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-API_HOST = http://localhost:2000
+API_HOST = https://libapp-22c8e613e2c2.herokuapp.com/
+REACT_APP_RECAPTCHA_SITE_KEY=6Ldl-tspAAAAAMFgU-aOT5gkzMZIr0LfFXzgASzK
