--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "antd": "^5.17.3",
     "axios": "^1.6.8",
     "daisyui": "^4.10.2",
+    "dompurify": "^3.1.4",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "sweetalert2": "^11.11.0"
   },
   "devDependencies": {
     "@types/react": "~18.2.73",
